fixed login placeholder cutoffs

--- a/frontend/app/stylesheets/patient-status.styl
+++ b/frontend/app/stylesheets/patient-status.styl
@@ -505,10 +505,11 @@ path
 
 .tick
   font-size large
-  @media screen and (max-width: 350px)
-    font-size small
   @media screen and (max-width: 600px)
     font-size smaller
+  @media screen and (max-width: 350px)
+    font-size small
+
 
 #buttonLeft
   width: 100%
@@ -516,23 +517,25 @@ path
 #injuryTitle
   margin-top 5%
   font-size 3vw
-  @media screen and (max-width: 350px)
-    font-size 3vw
   @media screen and (max-width: 600px)
     font-size 4vw
+  @media screen and (max-width: 350px)
+    font-size 4vw
+
 
 #singlePercent
-  font-size 3vw
-  @media screen and (max-width: 350px)
-    font-size 3vw
+  font-size 2.5vw
   @media screen and (max-width: 600px)
+    font-size 4vw
+  @media screen and (max-width: 350px)
     font-size 4vw
 
+
 .recoveryText
-  font-size 3vw
+  font-size 2vw
   padding-bottom 2%
   border-bottom 1px solid $mainColor
-  @media screen and (max-width: 350px)
-    font-size 3vw
   @media screen and (max-width: 600px)
     font-size 4vw
+  @media screen and (max-width: 350px)
+    font-size 3vw
